# treehacks

./: .dockerignore  .gitignore  Dockerfile  README.md  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  action_timeline.py  agent.py  app.py  auth.py  cluster_profiles.py  db.py  mcp_server.py  mock_profiles.csv  mock_profiles_large.csv  package.json  requirements.txt  seed.py  server.js  test_cluster.py  video.py
backend/ai_agents/: action_timeline.py  agent.py  group_ads.py  market_research.py  orchestrator.py  tool_catalog.py  transform_planner.py  video.py
backend/ai_agents/generative/: README.md  agent.py  utils.py
backend/ai_agents/generative/lucy_video_to_video/: .env.example  Makefile  environment.yml  requirements.txt
backend/flash-examples-1/: README.md  main.py  pyproject.toml
backend/flash-examples-1/.runpod/: resources.pkl
backend/flash-examples-1/docs/cli/: commands.md  getting-started.md  troubleshooting.md
backend/flash-examples-1/lucy_run/: __init__.py
backend/flash-examples-1/lucy_run/.runpod/: resources.pkl
backend/flash-examples-1/lucy_run/workers/gpu/: __init__.py  endpoint.py
backend/flash-examples-1/runpod_flash_examples.egg-info/: PKG-INFO  requires.txt
backend/flash-examples-1/scripts/: sync_example_deps.py
backend/generative/: README.md  requirements-gpu.txt
backend/generative/scripts/: object_erase.py  text_replace.py
frontend/: app.js  index.html  package-lock.json  package.json  styles.css
frontend.bak/: package.json
frontend/app/: globals.css  layout.jsx  layout.tsx  page.jsx  page.tsx
frontend/app/console/: layout.tsx  page.tsx
frontend/app/console/campaigns/[id]/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: nav.tsx
frontend/components/console/: campaign-list.tsx  sidebar.tsx  upload-dialog.tsx
frontend/components/landing/: footer.tsx  hero.tsx  how-it-works.tsx  pricing.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  logo.tsx
frontend/lib/: api.ts  auth.ts  mock.ts  types.ts
frontend/public/: mock_profiles.csv
tests/: README.md  analysis.json  run_analysis.py  run_color_grades.py  run_group_ads.py  run_market_research.py  run_tool_smoke.py
tests/group_ads/: metadata.json
(+11 files in other folders)
